--- a/src/export_presets.cfg
+++ b/src/export_presets.cfg
@@ -27,7 +27,7 @@ architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
 version/code=1
-version/name="1.0"
+version/name="1.2.2"
 package/unique_name="org.honzapkcz.campinvaders"
 package/name="Camp Invaders"
 package/signed=true
@@ -272,7 +272,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../web/index.html"
+export_path="../build/web/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
