Added new scene: KillRay
KillRay
|-Area2d
| |-CollisionShape2D (square)
|-GPUParticle2D

--- a/src/export_presets.cfg
+++ b/src/export_presets.cfg
@@ -17,7 +17,7 @@ encrypt_directory=false
 [preset.0.options]
 
 custom_template/debug=""
-custom_template/release=""
+custom_template/release="/home/honza/Applications/godot/bin/android_release.apk"
 gradle_build/use_gradle_build=false
 gradle_build/export_format=0
 gradle_build/min_sdk=""
@@ -26,8 +26,8 @@ architectures/armeabi-v7a=false
 architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
-version/code=1
-version/name="1.2.2"
+version/code=112
+version/name="1.1.2"
 package/unique_name="org.honzapkcz.campinvaders"
 package/name="Camp Invaders"
 package/signed=true
